@startuml examples.doc_as_code
namespace examples.doc_as_code.school {}
class examples.doc_as_code.school.Course {
  name: str
  teacher: Person
}
class examples.doc_as_code.school.Person {
  firstname: str
  lastname: str
}
class examples.doc_as_code.school.Student {
  courses: list[Course]
}
examples.doc_as_code.school.Course *-- examples.doc_as_code.school.Person
examples.doc_as_code.school.Student *-- examples.doc_as_code.school.Course
examples.doc_as_code.school.Person <|-- examples.doc_as_code.school.Student
footer Generated by //py2puml//
@enduml

